[package]
name = "nullbox"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["nullbox contributors"]
description = "A modern BusyBox-like utility with 250+ commands inspired by DOS, Linux, Unix"
license = "MIT"

[dependencies]
regex = "1.10"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.21"
hostname = "0.3"
num_cpus = "1.16"
crc32fast = "1.3"

[lib]
name = "nullbox"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "nullbox"
path = "src/main.rs"
